more specific layout class names

--- a/task-app/src/app/base-layout/base-layout.component.html
+++ b/task-app/src/app/base-layout/base-layout.component.html
@@ -1,9 +1,9 @@
 <div class="main-container">
-  <nav class="main-header">
+  <nav class="main-nav">
     <img
       src="../../assets/images/HTML.png"
       alt="HTML5 Logo"
-      class="logo-icon"
+      class="main-nav-logo-icon"
     />
     <p>Zadanie <strong>rekrutacyjne</strong></p>
   </nav>
@@ -11,7 +11,7 @@
     <router-outlet></router-outlet>
   </main>
   <footer class="main-footer">
-    <div class="css-awesome">
+    <div class="main-footer-css-awesome">
       <div>
         CSS <br />
         IS <br />
