--- a/task-app/src/app/shared/components/select/select.component.html
+++ b/task-app/src/app/shared/components/select/select.component.html
@@ -4,6 +4,8 @@
   </div>
   <div class="dropdown-content">
     <a class="dropdown-option">> Zresetuj ustawienia</a>
-    <a class="dropdown-option">> Pokaż dane osobowe</a>
+    <a class="dropdown-option" (click)="toggleAuthorVisible()"
+      >> Pokaż dane osobowe</a
+    >
   </div>
 </div>
