create articles service

--- a/task-app/src/app/base-layout/base-layout.component.html
+++ b/task-app/src/app/base-layout/base-layout.component.html
@@ -8,7 +8,7 @@
     <div>
       <p>Zadanie <strong>rekrutacyjne</strong></p>
       @if (authorService.authorVisible()) {
-      <p>Dawid Guziur</p>
+      <p>{{ authorService.author }}</p>
       }
     </div>
   </nav>
