--- a/task-app/src/app/shared/components/radio/radio.component.html
+++ b/task-app/src/app/shared/components/radio/radio.component.html
@@ -1,5 +1,10 @@
 <label class="radio-container">
-  <input type="radio" [name]="name()" [value]="value()" />
+  <input
+    type="radio"
+    [name]="name()"
+    [value]="value()"
+    (change)="changed.emit()"
+  />
   <span class="custom-radio"></span>
   {{ label() }}
 </label>
