change main page grid layout

--- a/task-app/src/app/modules/task/components/radio-block/block.component.html
+++ b/task-app/src/app/modules/task/components/radio-block/block.component.html
@@ -1,4 +1,6 @@
-<strong>
-  <p class="block-title">{{ title() }}</p>
-</strong>
-<ng-content> </ng-content>
+<div class="block-container">
+  <strong>
+    <p class="block-title">{{ title() }}</p>
+  </strong>
+  <ng-content> </ng-content>
+</div>
