--- a/task-app/src/app/modules/task/components/radio-block/block.component.scss
+++ b/task-app/src/app/modules/task/components/radio-block/block.component.scss
@@ -4,6 +4,9 @@
   text-wrap: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 25vw;
   text-align: center;
+}
+
+.block-container {
+  padding: 2rem;
 }
