--- a/task-app/src/app/modules/task/pages/main-page/main-page.component.html
+++ b/task-app/src/app/modules/task/pages/main-page/main-page.component.html
@@ -1,39 +1,39 @@
 <header-component>Nagłówek H1</header-component>
 
 <div class="main-page-block-container">
-  <block-component title="Pierwszy blok">
-    @for (article of articlesService.avaliableArticles(); track article) {
-    <app-radio
-      name="articles"
-      [value]="article.text"
-      [label]="article.title"
-      (changed)="selectedArticle.set(article)"
-    ></app-radio>
-    } @empty {
-    <h1>Brak artykułów</h1>
-    <p>Zawsze możesz jakieś dodać :></p>
-    } @if (isRandomAvaliable()) {
-    <app-radio
-      name="articles"
-      value=""
-      label="Losowy"
-      (changed)="getRandomUnusedArticle()"
-    ></app-radio>
-    }
-  </block-component>
+  <div class="main-page-buttons">
+    <block-component title="Pierwszy blok">
+      @for (article of articlesService.avaliableArticles(); track article) {
+      <app-radio
+        name="articles"
+        [value]="article.text"
+        [label]="article.title"
+        (changed)="selectedArticle.set(article)"
+      ></app-radio>
+      } @empty {
+      <h1>Brak artykułów</h1>
+      <p>Zawsze możesz jakieś dodać :></p>
+      } @if (isRandomAvaliable()) {
+      <app-radio
+        name="articles"
+        value=""
+        label="Losowy"
+        (changed)="getRandomUnusedArticle()"
+      ></app-radio>
+      }
+    </block-component>
 
-  <block-component title="Drugi blok">
-    <div class="main-page-btn-container">
-      <button (click)="replaceAllWithSelected()" class="primary-btn">
-        Zastąp
-      </button>
-      <button (click)="readArticle()" class="primary-btn">Doklej</button>
-    </div>
-  </block-component>
+    <block-component title="Drugi blok">
+      <div class="main-page-btn-container">
+        <button (click)="replaceAllWithSelected()" class="primary-btn">
+          Zastąp
+        </button>
+        <button (click)="readArticle()" class="primary-btn">Doklej</button>
+      </div>
+    </block-component>
+  </div>
 
-  <block-component
-    title="Trzeci blok z długą bardzo nazwą która sama się przytnie"
-  >
+  <block-component title="Trzeci blok z długą nazwą która sama się przytnie">
     @for (article of articlesService.usedArticles(); track article) {
     <header-component>{{ article.title }}</header-component>
     <article class="text-middle">
