create notification system

--- a/task-app/src/assets/style/_animations.scss
+++ b/task-app/src/assets/style/_animations.scss
@@ -30,3 +30,12 @@
     display: none;
   }
 }
+
+@keyframes moveIn {
+  from {
+    transform: translateX(50%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
