--- a/task-app/src/assets/style/_variable.scss
+++ b/task-app/src/assets/style/_variable.scss
@@ -2,5 +2,6 @@ $mobile-max-width: 960px;
 
 $black: rgb(34, 33, 33);
 $background: rgb(44, 46, 53);
+$error: rgb(226, 74, 74);
 $font: rgb(254, 254, 254);
 $secondary: #e59420;
