add app reset function

--- a/task-app/src/app/shared/components/select/select.component.html
+++ b/task-app/src/app/shared/components/select/select.component.html
@@ -3,7 +3,7 @@
     <button class="dropdown-button">Pokaż</button>
   </div>
   <div class="dropdown-content">
-    <a class="dropdown-option">> Zresetuj ustawienia</a>
+    <a class="dropdown-option" (click)="appReset()">> Zresetuj ustawienia</a>
     <a class="dropdown-option" (click)="toggleAuthorVisible()"
       >> Pokaż dane osobowe</a
     >
