make random radiobtn uncheck

--- a/task-app/src/app/base-layout/base-layout.component.html
+++ b/task-app/src/app/base-layout/base-layout.component.html
@@ -1,10 +1,12 @@
 <div class="main-container">
   <nav class="main-nav">
-    <img
-      src="../../assets/images/HTML.png"
-      alt="HTML5 Logo"
-      class="main-nav-logo-icon"
-    />
+    <a routerLink="/">
+      <img
+        src="../../assets/images/HTML.png"
+        alt="HTML5 Logo"
+        class="main-nav-logo-icon"
+      />
+    </a>
     <div>
       <p>Zadanie <strong>rekrutacyjne</strong></p>
       @if (authorService.authorVisible()) {
