--- a/task-app/src/app/shared/components/select/select.component.html
+++ b/task-app/src/app/shared/components/select/select.component.html
@@ -3,9 +3,11 @@
     <button class="dropdown-button">Pokaż</button>
   </div>
   <div class="dropdown-content">
-    <a class="dropdown-option" (click)="appReset()">> Zresetuj ustawienia</a>
-    <a class="dropdown-option" (click)="toggleAuthorVisible()"
-      >> Pokaż dane osobowe</a
+    <span class="dropdown-option" (click)="appReset()"
+      >> Zresetuj ustawienia</span
+    >
+    <span class="dropdown-option" (click)="toggleAuthorVisible()"
+      >> Pokaż dane osobowe</span
     >
   </div>
 </div>
