--- a/task-app/src/app/shared/components/radio/radio.component.html
+++ b/task-app/src/app/shared/components/radio/radio.component.html
@@ -3,6 +3,7 @@
     type="radio"
     [name]="name()"
     [value]="value()"
+    [checked]="checked()"
     (change)="changed.emit()"
   />
   <span class="custom-radio"></span>
