--- a/task-app/src/app/modules/task/components/article-form/article-form.component.html
+++ b/task-app/src/app/modules/task/components/article-form/article-form.component.html
@@ -1,10 +1,10 @@
 <div class="article-form-container">
-  <form (submit)="saveArticle()" [formGroup]="form">
+  <form (submit)="isEdit() ? editArticle() : saveArticle()" [formGroup]="form">
     <input-component name="Tytuł" controlName="title"></input-component>
     <textarea-component name="Text" controlName="text"></textarea-component>
     <div class="form-btn-container">
       <button type="submit" [disabled]="!form.valid" class="primary-btn">
-        Dodaj
+        {{ isEdit() ? "Edytuj" : "Dodaj" }}
       </button>
       <button
         type="button"
