--- a/task-app/src/app/modules/task/pages/main-page/main-page.component.scss
+++ b/task-app/src/app/modules/task/pages/main-page/main-page.component.scss
@@ -13,6 +13,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .main-page-buttons {
